# konvey

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  vite.config.ts
backend/: README.md  pyproject.toml
backend/src/konvey_backend/: __init__.py  __main__.py  rpc.py
backend/src/konvey_backend/models/: __init__.py  configuration.py  enterprise_data.py  project.py
backend/src/konvey_backend/parsers/: __init__.py  config_parser.py  xsd_parser.py
backend/src/konvey_backend/storage/: __init__.py  project_storage.py
backend/tests/: conftest.py  test_config_parser.py  test_migration_v1_to_v2.py  test_project_storage.py  test_rpc.py  test_xsd_parser.py
backend/tests/fixtures/: EnterpriseData_1_0_1.xsd  EnterpriseData_1_6_23.xsd  EnterpriseData_1_8_6.xsd  sample_enterprise_data.xsd
backend/tests/fixtures/sample_configuration/: Configuration.xml
backend/tests/fixtures/sample_configuration/Catalogs/: Контрагенты.xml
backend/tests/fixtures/sample_configuration/Documents/: РеализацияТоваровУслуг.xml
backend/tests/fixtures/sample_configuration/Enums/: ВидыКонтрагентов.xml
docs/: DECISIONS.md  DESIGN_TOKENS.md  GITHUB_SETUP.md  OPUS_HANDOVER.md  PROCESS.md  QUESTIONS.md  REFERENCE_EXT.md  REFERENCE_TOPICS.md  SPRINT_05_REPORT.md  SPRINT_0_REPORT.md
docs/archive/: OPUS_HANDOVER_SPRINT_0.md
scripts/: build-sidecar.ps1  build-sidecar.sh  check-env.ps1  check-env.sh  dev.ps1  ensure-sidecar-placeholder.ps1  msvc-env.ps1  setup.ps1
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
(+45 files in other folders)
