[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konvey-backend"
version = "0.1.0"
description = "Konvey backend (Python sidecar) — XSD/XML parsers, project storage, BSL generator"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Konvey Project Owner" }]
dependencies = [
    "lxml>=5.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.6",
]

[project.scripts]
konvey-backend = "konvey_backend.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # длинные строки — нормально для XML/XSD констант

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
